# CMake-Microchip-PIC

./: .gitignore  CMakeLists.txt
Compiler/: GPASM-ASM  GPASM_PIC14-ASM
Platform/: PIC14_CONFIG.cmake  PIC14_FAMILY  PIC14_FAMILY-C  PIC14_FAMILY-GPASM.cmake  PIC14_FAMILY-PIC16F887-GPASM.cmake  PIC14_FAMILY-PIC16F887-SDCC.cmake  PIC14_FAMILY-SDCC.cmake  PIC14_SUPPORT.cmake
src/: CMakeLists.txt
